(packgod page) fixed issue where some page content would go off screen on smaller devices

--- a/ciabi-web/static/shared.css
+++ b/ciabi-web/static/shared.css
@@ -572,7 +572,7 @@ a:hover {
   	overscroll-behavior: none;
 	overflow-y: auto;
 	width: 100%;
-	height: 100vh;
+	height: 100dvh;
 }
 
 .center-container {
